--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -16,4 +16,6 @@ $main-shadow: var(--shadow-color, var(--orig-bg-color)) 0 0 var(--shadow-size);
     --shadow-color: $shadow-color;
     --shadow-size: $shadow-size;
     --main-shadow: $main-shadow;
+
+    --tiny-split-image-min-height: $tiny-split-image-min-height
   }  
