--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -19,5 +19,5 @@ $tiny-split-image-min-height: 0px;
     --shadow-size: #{$shadow-size};
     --main-shadow: #{$main-shadow};
 
-    --tiny-split-image-min-height: #{$tiny-split-image-min-height}
-  }  
+    --tiny-split-image-min-height: #{$tiny-split-image-min-height};
+}
