--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -28,7 +28,7 @@ import '../styles/photos.scss'
           <div>
             <p>They'd like to update it a little to make it more “fresh,” though they like the current logo IDEA and the purple.</p>
           </div>
-          <div class="img-parent" style="--min-height: 175px; --max-height: calc(100% + 50px); --translate-y: -4.5px">
+          <div class="img-parent" style="--min-parent-height: 175px; --max-height: calc(100% + 50px); --translate-y: -4.5px">
             <img src="/assets/projects/treasurechest-foundation.png" alt="The Treasure Chest Foundation Image" />
           </div>
         </TinySplit>
