--- a/src/styles/split.scss
+++ b/src/styles/split.scss
@@ -95,7 +95,7 @@ section.split.tiny {
         &.img-parent {
             position: relative;
             overflow: hidden;
-            min-height: var(--min-height, var(--tiny-split-image-min-height));
+            min-height: var(--min-parent-height, var(--tiny-split-image-parent-min-height));
 
             img {
                 position: absolute;
