--- a/src/pages/debug.astro
+++ b/src/pages/debug.astro
@@ -3,9 +3,12 @@
     <head>
         <title>Use Eruda to Debug | G4G</title>
         <style>
+            html {
+                height: 100%;
+            }
             body {
                 margin: 0;
-                min-height: 100%;
+                height: 100%;
             }
             iframe {
                 border: 0;
