--- a/src/pages/debug.astro
+++ b/src/pages/debug.astro
@@ -5,6 +5,7 @@
         <style>
             html {
                 height: 100%;
+                overflow-y: hidden;
             }
             body {
                 margin: 0;
