--- a/src/pages/debug.astro
+++ b/src/pages/debug.astro
@@ -21,20 +21,19 @@
     <body>
         <iframe src="/" />
         <script>
-            let buffer = [];
+            let oldKeys = [];
             let expected = ['control', 'l']
             let corrects = []
 
             document.addEventListener('keydown', function(e) {
                 const key = event.key.toLowerCase();
-                // we are only interested in non numeric keys
                 if (!!parseInt(key) || parseInt(key) === 0) return;
 
-                if (buffer.length > 1) buffer = []
-                buffer.push(key);
+                if (oldKeys.length > 1) oldKeys = []
+                oldKeys.push(key);
 
                 expected.forEach(function(e, i) {
-                    if (buffer[i] === e) {
+                    if (oldKeys[i] === e) {
                         corrects.push(true)
                     }
                     else {
