--- a/src/pages/debug.astro
+++ b/src/pages/debug.astro
@@ -62,7 +62,7 @@
                         }
                         if (checkUrl !== location.host) isCorrect = false
                     }
-                    while (isCorrect === false) {
+                    while (isGood === false) {
                         url = prompt(`That url didn't fit the parameters. Where do you want to go?`)
                         isGood = true
                         checkUrl = url
