--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,7 +36,7 @@ if (dTitle.startsWith(' | ')) dTitle = dTitle.split(' | ')[1]
     <slot />
     <Footer />
     <InfoBox />
-    <span style="display: none;" class="hidden" hidden tElement></span>
+    <span style="display: none;" hidden tElement id="tElement"></span>
     <script>
       if (!!document.querySelector('.hero') === false) {
         document.querySelector('.header').setAttribute('bBorder', '')
