--- a/src/pages/debug.astro
+++ b/src/pages/debug.astro
@@ -19,7 +19,7 @@
         </style>
     </head>
     <body>
-        <iframe src="/" />
+        <iframe src="/" id="iframe" />
         <script>
             let oldKeys = [];
             let expected = ['control', 'l']
@@ -77,6 +77,7 @@
                             if (checkUrl !== location.host) isCorrect = false
                         }
                     }
+
                 }
             });
         </script>
