--- a/src/components/carousels.astro
+++ b/src/components/carousels.astro
@@ -46,7 +46,7 @@
         rightImg.alt = `Move Carousel ${i} Forward.`
 
         leftArrow.appendChild(leftImg)
-        leftArrow.appendChild(rightImg)
+        rightArrow.appendChild(rightImg)
 
         carousel.appendChild(leftArrow)
         carousel.appendChild(imgs)
