--- a/src/components/carousels.astro
+++ b/src/components/carousels.astro
@@ -56,7 +56,7 @@
 
         data.querySelectorAll('img').forEach(function(img, i2) {
             let newImg = img.cloneNode(true)
-            carousel.appendChild(img)
+            imgs.appendChild(img)
         })
 
     })
