--- a/src/components/carousels.astro
+++ b/src/components/carousels.astro
@@ -77,6 +77,11 @@
 */
 </script>
 <script is:inline>
+    var currImgS = [
+        parseInt(document.querySelectorAll('[data-carousel]')[0].querySelector('.active'.getAttribute('data-index'))), 
+        parseInt(document.querySelectorAll('[data-carousel]')[1].querySelector('.active'.getAttribute('data-index'))), 
+    ]
+  
     function setImg(car=0) {
         let carousel = document.querySelectorAll('.carousel')[car]
         let ul = carousel.querySelector('ul.imgs')
