UPDATE GLOBAL STYLES (COULD MAKE HUGE BUGS)

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,7 @@ import Footer from '../components/footer.astro'
 import InfoBox from '../components/infobox.astro'
 
 import '../styles/globals.scss'
+import '../styles/scrollAnimations.scss'
 import '../styles/footer.scss'
 
 export interface Props {
