--- a/src/components/carousels.astro
+++ b/src/components/carousels.astro
@@ -78,8 +78,8 @@
 </script>
 <script is:inline>
     var currImgS = [
-        parseInt(document.querySelectorAll('[data-carousel]')[0].querySelector('.active'.getAttribute('data-index'))), 
-        parseInt(document.querySelectorAll('[data-carousel]')[1].querySelector('.active'.getAttribute('data-index'))), 
+        parseInt(document.querySelectorAll('[data-carousel]')[0].querySelector('.active').getAttribute('data-index')), 
+        parseInt(document.querySelectorAll('[data-carousel]')[1].querySelector('.active').getAttribute('data-index')), 
     ]
   
     function setImg(car=0) {
