--- a/src/components/carousels.astro
+++ b/src/components/carousels.astro
@@ -60,8 +60,8 @@
         })
 
     })
-/*
-<div class="carousel">
+</script>
+<!-- <div class="carousel">
     <a href={forwFunction}>
       <img src="/assets/arrows/L.svg" class="button" draggable="false" alt={`Move Carousel ${carouselIndex} Backward.`}>
     </a>
@@ -73,9 +73,7 @@
     <a href={backFunction}>
       <img src="/assets/arrows/R.svg" class="button" draggable="false" alt={`Move Carousel ${carouselIndex} Forward.`}>
     </a>
-</div>
-*/
-</script>
+</div> -->
 <script is:inline>
     var currImgS = [
         parseInt(document.querySelectorAll('[data-carousel]')[0].querySelector('.active').getAttribute('data-index')), 
