--- a/src/styles/scrollAnimations.scss
+++ b/src/styles/scrollAnimations.scss
@@ -1,5 +1,5 @@
 main > section {
-    &:is(:not(:has( > section)), > section) {
+    &:not(:has( > section)), & > section {
         animation: fade linear both;
         animation-timeline: view();
         animation-range: entry 50% cover 50%;
