--- a/src/components/carousels/workCarousel.astro
+++ b/src/components/carousels/workCarousel.astro
@@ -1,5 +1,5 @@
 ---
-import Carousel from '../components/carousel.astro'
+import Carousel from '../carousel.astro'
 
 const { carouselIndex } = Astro.props
 ---
