--- a/src/styles/scrollAnimations.scss
+++ b/src/styles/scrollAnimations.scss
@@ -1,9 +1,21 @@
+@mixin animations {
+    animation: fade linear both;
+    animation-timeline: view();
+    animation-range: entry 50% cover 50%;
+}
+  
+
 main > section {
-    &:not(:has( > section)), & > section {
-        animation: fade linear both;
-        animation-timeline: view();
-        animation-range: entry 50% cover 50%;
+    &:not(:has( > section)) {
+        @include animations;
     }
+    & > section {
+        @include animations;
+    }
+}
+
+.vHr, .hHr {
+    @include animations;
 }
 
 @keyframes fade {
