--- a/src/styles/scrollAnimations.scss
+++ b/src/styles/scrollAnimations.scss
@@ -1,7 +1,9 @@
+@import './variables.scss';
+
 @mixin animations {
     animation: fade linear both;
     animation-timeline: view();
-    animation-range: entry 50% cover 50%;
+    animation-range: entry var(--scroll-animation-value) cover var(--scroll-animation-value);
 }
   
 
