--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -7,7 +7,7 @@ const members = [
   'Amelia Chang', 
   'Luce Dittrich', 
   // 'Rien (Rick) Gupta', 
-  'Maya Heiss', 
+  // 'Maya Heiss', 
   'Chloe Mercado', 
   'Hanlin Su', 
   'Mia Tucker', 
