--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,14 +47,14 @@ import '../styles/photos.scss'
         </form>
       </section>
     </Split>
-    <div hHr></div>
+    <div class="hHr"></div>
     <section id="mwork" class="photos">
       <Carousels>
         <section align="center">
           <h1 style="--text-color: blue; cursor: pointer;" onclick="location.href = '/work?magic=true'" title="Click here to convert to list!">Member Work</h1>
           <WorkCarousel carouselIndex="0" />
         </section>
-        <div hHr style="--width: 850px;"></div>
+        <div class="hHr" style="--width: 850px;"></div>
         <section align="center">
           <h1 id="cphotos">Club Photos</h1>
           <ClubCarousel carouselIndex="1" />
