create and use beatriz.astro

--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -8,6 +8,7 @@ const members = [
   'Luce Dittrich', 
   // 'Rien (Rick) Gupta', 
   // 'Maya Heiss', 
+  'Beatriz Meneses', 
   'Chloe Mercado', 
   'Hanlin Su', 
   'Mia Tucker', 
