--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -17,7 +17,7 @@ import '../styles/header.scss'
       <a href="/projects" class="btn">Projects</a>
       <a href="/members" class="btn">Members</a>
       <a href="/work" class="btn">Member Work</a>
-      <a href="/sign-up" class="btn primary">Sign Up</a>
+      <a href="https://go.graphics-for-good.com/Sign-Up" class="btn primary">Sign Up</a>
 <!--  <a href="/portal" class="btn">Portal</a>-->
     </div>
     <img id="nav-hbg" class="nav-hbg" alt="Open Sidebar Navigation" src="/assets/icons/hamburger-large.svg"/>
