--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -7,10 +7,13 @@ import '../styles/header.scss'
     <img class="logo" src="/assets/Logo-Blank.svg" alt="Graphics for Good Logo" title="Our Logo">
   </div>
   <nav class="nav">
+    <input id="closeNav">
     <div>
       <div class="nav-info">
         <h3>Navigation</h3>
-        <img id="mob-nav-clse" class="icon mob-nav-clse" alt="Close Sidebar Navigation" src="/assets/icons/X.svg">
+        <label for="closeNav">
+          <img id="mob-nav-clse" class="icon mob-nav-clse" alt="Close Sidebar Navigation" src="/assets/icons/X.svg">
+        </label>
       </div>
       <a href="/" class="btn">Home</a>
       <a href="/mission" class="btn">Mission</a>
@@ -20,7 +23,9 @@ import '../styles/header.scss'
       <a href="https://go.graphics-for-good.com/Sign-Up" class="btn primary">Sign Up</a>
 <!--  <a href="/portal" class="btn">Portal</a>-->
     </div>
-    <img id="nav-hbg" class="nav-hbg" alt="Open Sidebar Navigation" src="/assets/icons/hamburger-large.svg"/>
+    <label for="closeNav">
+      <img id="nav-hbg" class="nav-hbg" alt="Open Sidebar Navigation" src="/assets/icons/hamburger-large.svg"/>
+    </label>
   </nav>
   <div class="social">
     <a href="https://instagram.com/4goodgraphics" id="instagram"></a>
