--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -7,12 +7,12 @@ import '../styles/header.scss'
     <img class="logo" src="/assets/Logo-Blank.svg" alt="Graphics for Good Logo" title="Our Logo">
   </div>
   <nav class="nav">
-    <input id="closeNav">
+    <input type="checkbox" id="closeNav" style="--display: none;" />
     <div>
       <div class="nav-info">
         <h3>Navigation</h3>
         <label for="closeNav">
-          <img id="mob-nav-clse" class="icon mob-nav-clse" alt="Close Sidebar Navigation" src="/assets/icons/X.svg">
+          <img id="mob-nav-clse" class="icon mob-nav-clse" alt="Close Sidebar Navigation" src="/assets/icons/X.svg" />
         </label>
       </div>
       <a href="/" class="btn">Home</a>
@@ -24,7 +24,7 @@ import '../styles/header.scss'
 <!--  <a href="/portal" class="btn">Portal</a>-->
     </div>
     <label for="closeNav">
-      <img id="nav-hbg" class="nav-hbg" alt="Open Sidebar Navigation" src="/assets/icons/hamburger-large.svg"/>
+      <img id="nav-hbg" class="nav-hbg" alt="Open Sidebar Navigation" src="/assets/icons/hamburger-large.svg" />
     </label>
   </nav>
   <div class="social">
