--- a/src/pages/members/shikha.astro
+++ b/src/pages/members/shikha.astro
@@ -17,7 +17,7 @@ var userData = {
       sizes: [
         {
           ext: 'png',
-          name: 'large', 
+          name: 'full', 
         }, 
       ],
     },
