--- a/src/pages/members/shikha.astro
+++ b/src/pages/members/shikha.astro
@@ -1,4 +1,7 @@
 ---
+import defaultBio from './defaultBio.js'
+import updateUserData from './updateUserData.js'
+
 var userData = {
   username: 'shikha', 
   name: 'Shikha Iyer <span id="tag">(Club President)</span>',
