--- a/src/styles/scrollAnimations.scss
+++ b/src/styles/scrollAnimations.scss
@@ -22,9 +22,9 @@ main:not(.profile) > * {
 
 @keyframes fade {
     from {
-        opacity: 0.5;
+        scale: 0.5;
     }
     to {
-        opacity: 1;
+        scale: 1;
     }
 }
