--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -7,7 +7,7 @@ import '../styles/header.scss'
     <img class="logo" src="/assets/Logo-Blank.svg" alt="Graphics for Good Logo" title="Our Logo">
   </div>
   <nav class="nav">
-    <input type="checkbox" id="closeNav" style="--display: none;" />
+    <input type="checkbox" id="closeNav" style="--display: auto;" />
     <div>
       <div class="nav-info">
         <h3>Navigation</h3>
