--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,6 +44,8 @@ if (dTitle.startsWith(' | ')) dTitle = dTitle.split(' | ')[1]
       }
     </script>
     <script is:inline src="/script.js"></script>
-    <script is:inline src="/eruda.js"></script>
+    <script is:inline>
+      javascript:(function () { var script = document.createElement('script'); script.src="//cdn.jsdelivr.net/npm/eruda"; document.body.appendChild(script); script.onload = function () { eruda.init() } })();
+    </script>
   </body>
 </html>
