--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -161,7 +161,7 @@ a#go2content[href="javascript:scrollToNum()"] {
         top: 0;
         right: 0;
     
-        padding: var(--padding) var(--padding) var(--padding);
+        padding: var(--padding) var(--padding);
 
         display: grid;
         grid-template-columns: 0fr;
